fixed alignment of text on resume modal

--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,11 @@ footer a {
     align-items: center;
 }
 
+.carousel-item {
+    align-self: flex-start; 
+    width: 100%; 
+}
+
 .carousel-image {
     max-width: 100%;
     max-height: 100%;
@@ -412,9 +417,16 @@ footer a {
 
 .resume-content {
     padding: 20px;
+    padding-left: 10%; 
+    padding-right: 10%;  /* added this line */
     color: #f0f0f0;
     font-size: 16px;
     line-height: 1.6;
+    
+    margin: 0 auto; /* Centers the content if the viewport is wider than 600px */
+    text-align: left; /* Added this line */
+    align-self: flex-start; /* New property to override flex alignment */
+    width: 90%; /* New property to occupy full width */
 }
  
 .resume-content section {
@@ -441,5 +453,12 @@ footer a {
     font-size: 18px;
     margin-bottom: 5px;
     color: #f7a987;
+}
+
+@media screen and (max-width: 768px) {
+    .resume-content {
+        padding-left: 5px; /* Changed padding-left for screens smaller than 768px */
+        padding-right: 5px;  /* added this line */
+    }
 }
 
